--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,32 +7,19 @@ environment:
   sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
-  http: '>=0.11.1 <0.12.0'
-  flutter_web: any
-  flutter_web_ui: any
+  http: '^0.12.0'
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^0.1.2
-  flutter_svg: ^0.18.0
+  cupertino_icons: ^1.0.2
+  flutter_svg: ^0.19.2+1
   smooth_star_rating: ^1.0.4
 
 dev_dependencies:
   build_runner: ^1.5.0
-  build_web_compilers: ^2.1.0
   pedantic: ^1.7.0
   flutter_test:
     sdk: flutter
-
-dependency_overrides:
-  flutter_web:
-    git:
-      url: https://github.com/flutter/flutter_web
-      path: packages/flutter_web
-  flutter_web_ui:
-    git:
-      url: https://github.com/flutter/flutter_web
-      path: packages/flutter_web_ui
 
 flutter:
   uses-material-design: true
