--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   http: '^0.12.0'
   flutter:
     sdk: flutter
+  font_awesome_flutter: ^8.11.0
+  flare_flutter: ^2.0.6
 
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.19.2+1
@@ -24,6 +26,8 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - assets/teddy/
     - assets/images/
     - assets/icons/
-
+    - assets/fonts/
+    
