--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,9 @@ environment:
   sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
+  badges: ^1.1.6
+  carousel_slider: ^3.0.0
+  flutter_map: any
   http: '>=0.11.1 <0.12.0'
   flutter_web: any
   flutter_web_ui: any
