--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,12 +16,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^0.1.2
-  flutter_svg: ^0.18.0
-  smooth_star_rating: ^1.0.4
+  cupertino_icons: ^1.0.2
+  flutter_svg: ^0.19.2+1
+  smooth_star_rating: ^1.1.1
 
 dev_dependencies:
-  build_runner: ^1.5.0
+  build_runner: ^1.11.1
   build_web_compilers: ^2.1.0
   pedantic: ^1.7.0
   flutter_test:
