--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   flutter_svg: ^0.18.0
   smooth_star_rating: ^1.0.4
+  intl: ^0.16.1
 
 dev_dependencies:
   build_runner: ^1.5.0
