--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.2
-  flutter_svg: ^0.19.2+1
+  cupertino_icons: any
+  flutter_svg: any
   smooth_star_rating: ^1.1.1
 
 dev_dependencies:
