--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,16 @@ environment:
   sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
+  flutter_map: any
+  flutter_map_marker_cluster: any
+  map_controller: ^0.8.0
   http: '^0.12.0'
+  keyboard_visibility: ^0.5.6
+  flutter_typeahead: ^2.0.0
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^0.1.2
   flutter_svg: ^0.19.2+1
   smooth_star_rating: ^1.0.4
 
@@ -27,3 +32,9 @@ flutter:
     - assets/images/
     - assets/icons/
 
+  fonts:
+    - family: RobotoMono
+      fonts:
+        - asset: fonts/RobotoMono-Regular.ttf
+        - asset: fonts/RobotoMono-Bold.ttf
+          weight: 700
