--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^0.1.2
+  carousel_slider:
+  cupertino_icons: ^1.0.2
   flutter_svg: ^0.19.2+1
   smooth_star_rating: ^1.0.4
 
