--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,7 @@ environment:
   sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
-  http: '>=0.11.1 <0.12.0'
-  flutter_web: any
-  flutter_web_ui: any
+  http: '^0.12.0'
   flutter:
     sdk: flutter
 
@@ -20,20 +18,9 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^1.5.0
-  build_web_compilers: ^2.1.0
   pedantic: ^1.7.0
   flutter_test:
     sdk: flutter
-
-dependency_overrides:
-  flutter_web:
-    git:
-      url: https://github.com/flutter/flutter_web
-      path: packages/flutter_web
-  flutter_web_ui:
-    git:
-      url: https://github.com/flutter/flutter_web
-      path: packages/flutter_web_ui
 
 flutter:
   uses-material-design: true
