--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   http: '^0.12.0'
   flutter:
     sdk: flutter
+  gooey_carousel: ^0.1.2
 
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.19.2+1
