--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dev_dependencies:
   pedantic: ^1.7.0
   flutter_test:
     sdk: flutter
+  gooey_carousel: ^0.1.2
 
 flutter:
   uses-material-design: true
