--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,14 @@ dependencies:
   http: '^0.12.0'
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
-  cupertino_icons: ^1.0.2
-  flutter_svg: ^0.19.2+1
+  cupertino_icons: ">=1.0.0 <2.0.0"
   smooth_star_rating: ^1.0.4
+
+  date_range_form_field: ^0.0.5
+  time_range: ^0.5.0
 
 dev_dependencies:
   build_runner: ^1.5.0
@@ -26,4 +30,5 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/
 
