--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  time_range: ^0.5.0
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.19.2+1
   smooth_star_rating: ^1.0.4
