--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,8 @@ dependencies:
 
   date_range_form_field: ^0.0.5
   time_range: ^0.5.0
-
+  numberpicker: ^1.3.0
+  
 dev_dependencies:
   build_runner: ^1.5.0
   pedantic: ^1.7.0
