--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_calendar_carousel: ^1.5.3
+  google_maps_flutter: ^1.2.0
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.19.2+1
   smooth_star_rating: ^1.0.4
