--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.2
-  flutter_svg: ^0.19.2+1
+  cupertino_icons: ^1.0.0
+  flutter_svg: ^0.19.0
   smooth_star_rating: ^1.0.4
+  flutter_map: any
+  flutter_map_marker_popup: ^0.1.4
 
 dev_dependencies:
   build_runner: ^1.5.0
