--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.19.2+1
   smooth_star_rating: ^1.0.4
+  dio: ^3.0.10
+  dropdownfield: 1.0.0
 
 dev_dependencies:
   build_runner: ^1.5.0
